# rust-fractal-core

./: Cargo.toml
src/: renderer.rs
src/util/: data_export.rs  mod.rs  recolour_exr.rs
