[package]
name = "rust_fractal"
version = "0.14.0"
authors = ["jackyarndley <34801340+jackyarndley@users.noreply.github.com>"]
description = "Fast, efficient mandelbrot set renderer."
edition = "2018"

[dependencies]
image = "0.25.1"
rand = "^0.8.3"
rand_distr = "^0.4.0"
num-complex = "0.4.6"
rayon = "^1.3.1"
exr = "1.72.0"
smallvec = "^1.4.2"
config = "0.14.0"
half = "2.4.1"
parking_lot = "0.12.1"
colorgrad = "0.6.2"
gmp-mpfr-sys = "1.6.2"

[dependencies.clap]
version = "4.5.4"
features = ["derive"]

[dependencies.rug]
version = "1.11"
default-features = false
features = ["float", "complex"]

#Additional commands that can improve performance (maybe by around 5-10%)
[profile.release]
debug = true
#incremental = true